# stonks-ai

./: .bash_aliases  .cursorrules  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  app.py  docker-compose.yml  download_financial_data.py  download_stock_data.py  edgar_xbrl_extractor.py  env.example  example_client.py  example_db_usage.py  init.sql  models.py  mypy.ini  pyproject.toml  pytest.ini  rag_system.py  requirements.txt  run.py  setup_dev.sh  test_setup.py
api/: __init__.py  admin.py  companies.py  financials.py
db/: __init__.py
db/models/: __init__.py  base.py
db/operations/: __init__.py  base.py  companies.py  filings.py  financial_facts.py
filings/: __init__.py  filings_loader.py  sec_10q.py  sec_edgar.py  sec_xbrl_filings_loader.py
filings/db/: __init__.py  companies.py  concept_normalization_overrides.py  dimension_normalization_overrides.py  filings.py  financial_facts.py  financial_facts_overrides.py  quarterly_financials.py  yearly_financials.py
filings/gists/: 10q_parser_usage.py  db_usage.py  filings_loader_usage.py  quarterly_financials_usage.py  sec_xbrl_filings_loader_usage.py  sec_xbrl_parser_usage.py  yearly_financials_usage.py
filings/models/: __init__.py  company.py  concept_normalization_override.py  dimension_normalization_override.py  filing.py  filing_entity.py  financial_fact.py  financial_facts_override.py  quarterly_financials.py  ticker.py  yearly_financials.py
filings/parsers/: __init__.py  geography.py  product.py  sec_10q.py  sec_xbrl.py
migrations/: env.py
migrations/data/: concept-hierarchy.csv  concept-normalization-overrides.csv  dimension-normalization-overrides.csv  fact-overrides.csv  financial-facts-overrides.csv
migrations/versions/: 0001_create_documents_table_with_vector_support.py  0002_add_companies_filings_financial_facts.py  0003_add_concept_normalization.py  0003_add_concept_normalization_overrides.py  0003_add_fact_overrides.py  0003_add_quarterly_financials_view.py  0004_add_automatic_concept_normalization.py  0004_add_concept_normalization_overrides.py  0004_add_concept_normalization_views.py  0004_add_dimension_normalization_overrides.py  0004_add_quarterly_financials_view.py  0005_add_concept_normalization_views.py  0005_add_dimension_normalization_overrides.py  0005_add_fact_overrides.py  0005_add_quarterly_financials_view.py  0005_add_yearly_financials_view.py  0006_add_concept_normalization_views.py  0006_add_dimension_normalization_views.py  0006_add_fact_overrides_view.py  0006_add_quarterly_financials_view.py  0006_add_yearly_financials_view.py  0006_create_derived_financial_tables.py  0007_add_concept_normalization_views.py  0007_add_dimension_normalization_views.py  0007_add_fact_normalization_views.py  0007_add_quarterly_financials_view.py  0007_add_yearly_financials_view.py  0007_init_financials_procedures.py  0008_add_dimension_normalization_views.py  0008_add_fact_normalization_views.py  0008_add_quarterly_financials_view.py  0008_add_yearly_financials_view.py  0009_add_fact_normalization_view.py  0009_add_quarterly_financials_view.py  0009_add_yearly_financials_view.py  0010_add_quarterly_financials_view.py  0011_add_yearly_financials_view.py
notebooks/: edgartools_experiments.ipynb
sql/functions/: financial_facts_overridden.sql
sql/procedures/: refresh_concept_normalization.sql  refresh_dimension_normalization.sql  refresh_financial_facts_normalized.sql  refresh_financial_facts_overridden.sql  refresh_financials.sql  refresh_hierarchy_normalization.sql  refresh_quarterly_financials.sql  refresh_yearly_financials.sql
tests/: test_admin_endpoints.py  test_basic.py  test_edgar_extractor.py  test_financials_endpoints.py  test_minimal_edgar.py  test_unified_endpoint.py
tests/db/: README.md  conftest.py  test_companies.py  test_filings.py  test_financial_facts.py  test_integration.py
tests/filings/: __init__.py  test_filings_loader.py  test_sec_xbrl_filings_loader.py
tests/filings/db/: README.md  __init__.py  conftest.py  test_companies.py  test_concept_normalization_overrides.py  test_filings.py  test_financial_facts.py  test_integration.py  test_quarterly_financials.py  test_quarterly_financials_integration.py  test_yearly_financials.py
tests/filings/parsers/: test_geography.py  test_geography_parser.py  (+2 more)
